# AtA-gpu

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh
src/: ata.cpp  ata.cu  ata.h  strassen.cpp  strassen.cu
